// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders (disabled) Slider correctly 1`] = `
<div
  className=""
  id="slider-1"
>
  <div
    className=""
  >
    <div
      className=""
    />
    <div
      className=""
    >
      <div
        className="ms-Slider-track"
        style={
          Object {
            "borderRadius": "99px",
            "left": 0,
            "transition": "none",
            "width": "50%",
          }
        }
      />
    </div>
    <div
      className=""
      style={
        Object {
          "transform": "translateX(50%)",
          "transition": "none",
        }
      }
    >
      <div
        aria-disabled={true}
        aria-valuemax={10}
        aria-valuemin={0}
        aria-valuenow={5}
        aria-valuetext="5"
        className="ms-Slider-thumb"
        role="slider"
      />
    </div>
    <div
      className=""
    />
  </div>
</div>
`;

exports[`Slider renders Slider correctly 1`] = `
<div
  className=""
  id="slider-1"
  onKeyDown={[Function]}
  onPointerDown={[Function]}
>
  <div
    className=""
  >
    <div
      className=""
    />
    <div
      className=""
    >
      <div
        className="ms-Slider-track"
        style={
          Object {
            "borderRadius": "99px",
            "left": 0,
            "transition": "none",
            "width": "50%",
          }
        }
      />
    </div>
    <div
      className=""
      style={
        Object {
          "transform": "translateX(50%)",
          "transition": "none",
        }
      }
    >
      <div
        aria-valuemax={10}
        aria-valuemin={0}
        aria-valuenow={5}
        aria-valuetext="5"
        className="ms-Slider-thumb"
        role="slider"
        tabIndex={0}
      />
    </div>
    <div
      className=""
    />
  </div>
</div>
`;

exports[`Slider renders Slider with marks correctly 1`] = `
Array [
  <div
    className=""
    id="slider-1"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
      style={
        Object {
          "gridTemplateColumns": "0% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 2.999999999999993% 3.000000000000007% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% 3% ",
        }
      }
    >
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark first"
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      />
      <div
        className=""
      >
        <div
          className="ms-Slider-track"
          style={
            Object {
              "borderRadius": "99px",
              "left": 0,
              "transition": "none",
              "width": "5%",
            }
          }
        />
      </div>
      <div
        className=""
        style={
          Object {
            "transform": "translateX(5%)",
            "transition": "none",
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={5}
          aria-valuetext="5"
          className="ms-Slider-thumb"
          role="slider"
          tabIndex={0}
        />
      </div>
      <div
        className=""
      />
    </div>
  </div>,
  <div
    className=""
    id="slider-2"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
      style={
        Object {
          "gridTemplateColumns": "1% ",
        }
      }
    >
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      />
      <div
        className=""
      >
        <div
          className="ms-Slider-track"
          style={
            Object {
              "borderRadius": "99px",
              "left": 0,
              "transition": "none",
              "width": "5%",
            }
          }
        />
      </div>
      <div
        className=""
        style={
          Object {
            "transform": "translateX(5%)",
            "transition": "none",
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={5}
          aria-valuetext="5"
          className="ms-Slider-thumb"
          role="slider"
          tabIndex={0}
        />
      </div>
      <div
        className=""
      />
    </div>
  </div>,
  <div
    className=""
    id="slider-3"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
      style={
        Object {
          "gridTemplateColumns": "1% 2% 4.000000000000001% 0.9999999999999991% ",
        }
      }
    >
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      />
      <div
        className=""
      >
        <div
          className="ms-Slider-track"
          style={
            Object {
              "borderRadius": "99px",
              "left": 0,
              "transition": "none",
              "width": "5%",
            }
          }
        />
      </div>
      <div
        className=""
        style={
          Object {
            "transform": "translateX(5%)",
            "transition": "none",
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={5}
          aria-valuetext="5"
          className="ms-Slider-thumb"
          role="slider"
          tabIndex={0}
        />
      </div>
      <div
        className=""
      />
    </div>
  </div>,
  <div
    className=""
    id="slider-4"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
      style={
        Object {
          "gridTemplateRows": "5% -3% 7% 9% ",
        }
      }
    >
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
      <div
        className="ms-Slider-markItemContainer"
      >
        <div
          className="ms-Slider-mark "
        />
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      />
      <div
        className=""
      >
        <div
          className="ms-Slider-track"
          style={
            Object {
              "borderRadius": "99px",
              "height": "5%",
              "top": 0,
              "transition": "none",
            }
          }
        />
      </div>
      <div
        className=""
        style={
          Object {
            "transform": "translateY(5%)",
            "transition": "none",
          }
        }
      >
        <div
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={5}
          aria-valuetext="5"
          className="ms-Slider-thumb"
          role="slider"
          tabIndex={0}
        />
      </div>
      <div
        className=""
      />
    </div>
  </div>,
]
`;

exports[`Slider renders Slider with origin correctly 1`] = `
Array [
  <div
    className=""
    id="slider-1"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
    >
      <div
        className=""
      />
      <div
        className=""
      >
        <div
          className="ms-Slider-track"
          style={
            Object {
              "borderRadius": "0px 99px 99px 0px",
              "left": "20%",
              "transition": "none",
              "width": "30%",
            }
          }
        />
      </div>
      <div
        className=""
        style={
          Object {
            "transform": "translateX(50%)",
            "transition": "none",
          }
        }
      >
        <div
          aria-valuemax={10}
          aria-valuemin={0}
          aria-valuenow={5}
          aria-valuetext="5"
          className="ms-Slider-thumb"
          role="slider"
          tabIndex={0}
        />
      </div>
      <div
        className=""
      />
    </div>
  </div>,
  <div
    className=""
    id="slider-2"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
    >
      <div
        className=""
      />
      <div
        className=""
      >
        <div
          className="ms-Slider-track"
          style={
            Object {
              "borderRadius": "0px 0px 99px 99px",
              "height": "30%",
              "top": "20%",
              "transition": "none",
            }
          }
        />
      </div>
      <div
        className=""
        style={
          Object {
            "transform": "translateY(50%)",
            "transition": "none",
          }
        }
      >
        <div
          aria-valuemax={10}
          aria-valuemin={0}
          aria-valuenow={5}
          aria-valuetext="5"
          className="ms-Slider-thumb"
          role="slider"
          tabIndex={0}
        />
      </div>
      <div
        className=""
      />
    </div>
  </div>,
]
`;

exports[`Slider renders vertical Slider correctly 1`] = `
<div
  className=""
  id="slider-1"
  onKeyDown={[Function]}
  onPointerDown={[Function]}
>
  <div
    className=""
  >
    <div
      className=""
    />
    <div
      className=""
    >
      <div
        className="ms-Slider-track"
        style={
          Object {
            "borderRadius": "99px",
            "height": "50%",
            "top": 0,
            "transition": "none",
          }
        }
      />
    </div>
    <div
      className=""
      style={
        Object {
          "transform": "translateY(50%)",
          "transition": "none",
        }
      }
    >
      <div
        aria-valuemax={10}
        aria-valuemin={0}
        aria-valuenow={5}
        aria-valuetext="5"
        className="ms-Slider-thumb"
        role="slider"
        tabIndex={0}
      />
    </div>
    <div
      className=""
    />
  </div>
</div>
`;
